--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,4 +46,4 @@
     max-width: fit-content;
     margin: auto;}
     
-body{background:linear-gradient(45deg,#ffded5,#fff);}
+body{background:linear-gradient(45deg,#fcfff4,#ffded5);}
