--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;}
-.movies img{
+.movies video{
     max-width: 80%;
     height: auto;
     display: block;
